renamed js file

--- a/index.html
+++ b/index.html
@@ -43,6 +43,6 @@
       <circle class="circle" cx="50%" cy="50%"/>
     </svg>
   </template>
-  <script src="main.js" type="module"></script>
+  <script src="countdown-timer.js" type="module"></script>
 </body>
 </html>
